--- a/main.css
+++ b/main.css
@@ -1,7 +1,34 @@
-
 body {
 	background: url("Images/bg.png");
+	background-attachment: scroll;
 	color: #191a1b;
+}
+.skyContainer {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 500px;
+	overflow: hidden;
+}
+.skyLeft {
+	position: absolute;
+	top: 0px;
+	right: 50%;
+	margin-right: -70px;
+	width: 60%;
+	height: 500px;
+	background: url("Images/sky.png");
+	background-position: right top;
+}
+.skyRight {
+	position: absolute;
+	top: 0px;
+	left: 50%;
+	margin-left: 420px;
+	width: 50%;
+	height: 500px;
+	background: url("Images/sky.png");
 }
 h1 {
 	font-family: 'Gloria Hallelujah', cursive;
